--- a/templates/backuppc-mac-rsync.j2
+++ b/templates/backuppc-mac-rsync.j2
@@ -13,6 +13,7 @@ $Conf{BackupFilesExclude} = [
     '/private/var/vm',
     '/private/var/tmp',
     '/private/tmp',
+    '/Volumes',
     'Caches',
     'CachedMessages'
 ];
