--- a/templates/backuppc-mac-rsync.j2
+++ b/templates/backuppc-mac-rsync.j2
@@ -4,7 +4,9 @@
 $Conf{XferMethod} = 'rsync';
 
 $Conf{BackupFilesExclude} = [
+    '.DS_Store',
     '.Trash',
+    '.Trashes',
     '/Trash',
     '/automount',
     '/Network',
@@ -13,9 +15,12 @@ $Conf{BackupFilesExclude} = [
     '/private/var/vm',
     '/private/var/tmp',
     '/private/tmp',
-    '/Volumes',
     'Caches',
     'CachedMessages'
 ];
+
+$Conf{RsyncClientCmd} = '$sshPath -q -x -l backuppc $host sudo $rsyncPath $argList+'
+
+$Conf{RsyncClientRestoreCmd} = '$sshPath -q -x -l backuppc $host sudo $rsyncPath $argList+'
 
 $Conf{ClientNameAlias} = '{{ item.ip_address }}';
