--- a/templates/backuppc-linux-rsync.j2
+++ b/templates/backuppc-linux-rsync.j2
@@ -14,9 +14,9 @@ $Conf{BackupFilesExclude} = {
   ]
 };
 
-$Conf{RsyncClientCmd} = '$sshPath -q -x -l backuppc $host sudo $rsyncPath $argList+'
+$Conf{RsyncClientCmd} = '$sshPath -q -x -l backuppc $host sudo $rsyncPath $argList+';
 
-$Conf{RsyncClientRestoreCmd} = '$sshPath -q -x -l backuppc sudo $host $rsyncPath $argList+'
+$Conf{RsyncClientRestoreCmd} = '$sshPath -q -x -l backuppc sudo $host $rsyncPath $argList+';
 
 {% if item.ip_address is defined -%}
 $Conf{ClientNameAlias} = '{{ item.ip_address }}';
