add sane exclude path

--- a/templates/backuppc-linux-rsync.j2
+++ b/templates/backuppc-linux-rsync.j2
@@ -12,6 +12,7 @@ $Conf{BackupFilesExclude} = {
     '/dvd',
     '/floppy',
     '/var/lib/backuppc',
+    '/var/lib/lxcfs/cgroup',
     '/mnt'
   ]
 };
