--- a/templates/backuppc-linux-rsync.j2
+++ b/templates/backuppc-linux-rsync.j2
@@ -19,7 +19,7 @@ $Conf{BackupFilesExclude} = {
 
 $Conf{RsyncClientCmd} = '$sshPath -o StrictHostKeyChecking=no -q -x -l backuppc $host sudo $rsyncPath $argList+';
 
-$Conf{RsyncClientRestoreCmd} = '$sshPath -o StrictHostKeyChecking=no -q -x -l backuppc sudo $host $rsyncPath $argList+';
+$Conf{RsyncClientRestoreCmd} = '$sshPath -o StrictHostKeyChecking=no -q -x -l backuppc $host sudo $rsyncPath $argList+';
 
 {% if item.ip_address is defined -%}
 $Conf{ClientNameAlias} = '{{ item.ip_address }}';
